--- a/.github/workflows/main_pistonrojo.yml
+++ b/.github/workflows/main_pistonrojo.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A66AF9F919584CAFABF9FB1332EFCE90 }}
+          client-id: 0925019c-2b55-4930-a957-bfd89fd4eafd
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_254F0675844543B3B71C9AE648E93D1C }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B295A1F7C2EA412B860E238C17DEF900 }}
 
