--- a/.github/workflows/main_pistonrojo.yml
+++ b/.github/workflows/main_pistonrojo.yml
@@ -49,3 +49,9 @@ jobs:
           app-name: 'PistonRojo'
           slot-name: 'Production'
           package: .
+
+      - name: Remove hostingstart.html after deploy
+        uses: azure/CLI@v2
+        with:
+          inlineScript: |
+            rm /home/site/wwwroot/hostingstart.html || true
